Templates and genrate.sh added, Updated read me, Fixed lint errors
